--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>www.Evanswebsite.com</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
@@ -26,9 +26,54 @@
             <button>Sign up</button>
         </div>
         <div class="img">
-            <img src="https://images.pexels.com/photos/2821728/pexels-photo-2821728.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt="Happy times">
+            <div class="pic" style="width: 600px; height: 200px; background-color: grey;"><div class="tr"><p class="pp">this is a placeholder for an image</p></div></div>
         </div>
     </div>
+    <div class="information">
+        <div class="random">
+            <h2><strong>Some random information</strong></h2>
+        </div>
+        <div class="images">
+            <div class="ill1">
+                <div class =ill style="width: 150px; height: 150px; border: 3px solid blue; border-radius: 10px;"></div> 
+                <p class="p">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="ill2">
+                <div class="ill" style="width: 150px; height: 150px; border: 3px solid blue; border-radius: 10px;"></div> 
+                <p class="p">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="ill3">
+                <div class="ill" style="width: 150px; height: 150px; border: 3px solid blue; border-radius: 10px;"></div>
+                <p class="p">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="ill4">
+                <div class="ill" style="width: 150px; height: 150px; border: 3px solid blue; border-radius: 10px;"></div>
+                <p class="p">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
+    <div class="quote">
+        <div class="words">
+            <p><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></p>
+        </div>
+        <div class="author">
+            <p><strong>-Thor, God of Thunder</strong></p>
+        </div>
+    </div>
+    <div class="action">
+        <div class="both">
+            <div class="time">
+                <p class="product"><strong>Call to action! It's time!</strong></p>
+                <p class="ezron">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="up">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Copyright &copy; The Odin Project 2021</p>
+    </div>
+</div>
 </body>
 </html>
